# silero-api-server

./: .env  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  run.bat  run.ps1  run.sh  server.py  tts.py
.github/workflows/: publish-to-test-pypi.yml
silero_api_server/: __main__.py  server.py  tts.py
test/: silero_test.py
