[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "silero-api-server"
authors = [
  { name="Ouoertheo", email="ouoertheo@tomeofjamin.net" },
]
description = "A simple FastAPI server to host Silero TTS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "loguru==0.7.0",
  "pydantic==1.10.7",
  "python-dotenv==1.0.0",
  "torch==2.0.0",
  "torchaudio==2.0.1",
  "uvicorn",
  "soundfile",
  "numpy",
  "pydub==0.25.1"
]
dynamic=["version"]

[project.urls]
"Homepage" = "https://github.com/ouoertheo/silero-api-server"
"Bug Tracker" = "https://github.com/ouoertheo/silero-api-server/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["silero_api_server"]
